# learned-index-tuning

./: .gitignore  CMakeLists.txt  README.md
scripts/: benchmark.py  benchmark_base13.py  benchmark_baseline.sh  benchmark_basermi.py  benchmark_stxbtree.py  build_baseline_rmi.py  build_baseline_rmi.sh  convert_data.py  download_prebuild_data.sh  generate.sh
scripts/rmi_specs/: uniform_dense_200M_uint64.json  wiki_ts_200M_uint64.json
src/: CMakeLists.txt  benchmark.cc  generate.cc  util.h
src/competitors/: rmi_search.h  rmi_universal.cpp  rmi_universal.h  stx_btree.h
src/generators/: gen_uniform.py  generate_queries.cc  zipf.h
src/searches/: branching_binary_search.h
train/: train.py  train_1.py  train_max.py  train_signle.py  train_single_l16.py  train_single_l8.py
